  - fixed bug with passing $smarty as reference in Smarty.compiler.class (messju)
  - corrected output with {strip} and PHP tag newlines (Monte)
  - added possibility to register function-callbacks as "array(&$obj, 'method)"
    this affects register_function(), -block, -compiler_function, -modifier, 
    -prefilter, -postfilter, -outputfilter-functions() and $cache_handler_func
    (messju)
  - added <labels> to html_checkboxes and html_radios (Philippe, messju)
  - added "labels"-options to turn off labels in html_checkboxes and _radios
    (messju)

Version 2.5.0 (April 11, 2003)
------------------------------

   - fixed bug with default modifier when passing integer 0
     (Monte)
   - change backtic syntax from $`foo` to `$foo` (Monte)
   - recognize $foo[][] syntax inside embedded quotes without
     backtics (Monte)
   - name=123 is passed as an integer (not a string) to plugins now (messju)
   - $length is now propagated to sub-values in debug_print_var (messju) 

Version 2.5.0-RC2 (March 26, 2003)
----------------------------------

    - made clear_cache() ignore compile_id, when clearing cache-groups (this
      is when no $tpl_file is supplied) (messju)
    - made onmouseout XHTML-compliant in function.popup.php (messju)
    - applied local-var-naming-scheme to fetch() (messju)
    - renamed $localvars to $_localvars in cache-file-handling-functions,
      added _get_auto_id()-function (messju)
    - swapped compile_id and cache_id in read_cache_file and write_cache_file
      (messju)
    - reverted patch for cache-file-handling (messju)
    - made html_radios and html_checkboxes accept "selected" instead
      of "checked" optionally. (messju)
    - made compile_id ignored in clear_cache, made order of
      auto_file_name $cache_id.$compile_id again, applied the the new
      variable-naming-scheme for cache_file_handing functions (messju)
    - removed notice of undefined var in _rm_auto() (messju)